--- a/Gml/Gml.csproj
+++ b/Gml/Gml.csproj
@@ -7,6 +7,7 @@
     <Company>VF</Company>
     <Authors>Valerii Fedorenko</Authors>
     <PackageTags>GmailClient Gmail GmailApi</PackageTags>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
