--- a/Gml/Gml.csproj
+++ b/Gml/Gml.csproj
@@ -7,7 +7,8 @@
     <Company>VF</Company>
     <Authors>Valerii Fedorenko</Authors>
     <PackageTags>GmailClient Gmail GmailApi</PackageTags>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
+    <PackageProjectUrl>https://github.com/valeraf23/GmailClient</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
